# boost-conan-cmake

./: .editorconfig  .env.example  .env.testing.example  .gitignore  .gitleaks.toml  .semgrep.yml  CMakeLists.txt  DEMO_FEATURES_SUMMARY.md  Dockerfile  Dockerfile.security  README.md  SECURITY.md  SECURITY_SUMMARY.md  conanfile.txt  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cmake-single-platform.yml  dependency-updates.yml  docker-build.yml  lambda-package.yml  security.yml
build-security-test/: conanbuildinfo.cmake  conanbuildinfo.txt  example.xlsx  filename  graph_info.json
ci/conan_conf/: settings.yml
conan-build/: graph_info.json
scripts/: README.md  cve_security_check.py  packager  security.mk  security_audit.sh  test-packager.sh
src/: main.cpp
test_build/: =2.0.0
